# Hooking-Template-With-Mod-Menu

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  main.cpp
app/src/main/cpp/Includes/: Logger.h  Utils.h
app/src/main/cpp/Patching/: Memory.h  Patch.cpp  Patch.h
app/src/main/cpp/Substrate/: SubstrateDebug.cpp  SubstrateDebug.hpp  SubstrateHook.cpp
app/src/main/cpp/X64Hook/: And64InlineHook.cpp
app/src/main/java/com/dark/force/: MainActivity.java  MenuService.java  NativeLibrary.java
gradle/wrapper/: gradle-wrapper.properties
